syntax = "proto3";

package com.tudai.monopatines.accounts.grpc;

option java_multiple_files = true;
option java_package = "com.tudai.monopatines.accounts.grpc";
option java_outer_classname = "UserServiceProto";

// Servicio gRPC para operaciones de usuarios
service UserService {
  // Crea un nuevo usuario
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  
  // Obtiene un usuario por su email
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  
  // Obtiene un usuario por su ID
  rpc GetUserById(GetUserByIdRequest) returns (UserResponse);
}

// Request para crear un usuario
message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone_number = 4;
  string password = 5; // Password ya hasheado
}

// Request para obtener usuario por email
message GetUserByEmailRequest {
  string email = 1;
}

// Request para obtener usuario por ID
message GetUserByIdRequest {
  int64 user_id = 1;
}

// Respuesta con datos del usuario
message UserResponse {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 5;
  string created_at = 6; // ISO 8601 format
  repeated string roles = 7; // Lista de roles
  string password = 8; // Password hasheado (solo para uso interno entre microservicios)
}

